--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+.hero {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 200px;
+            text-align: center;
+        }
+
+h1 {
+	font-size: 25px;
+}
+.right {
+	display: flex;
+	flex-direction: column;
+	row-gap: 5px;
+	padding: 5px;
+	justify-content: center;
+	align-items: center;
+}
+
+        .hero img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .hero a.button {
+            padding: 12px 20px;
+            background-color: red;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+			margin-bottom: 15px;
+        }
+
+        .hero a.button:hover {
+            background-color: rgb(248, 76, 76);
+        }
